manifests/services.yml
kind: Service
apiVersion: v1
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 4000
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: import
spec:
  selector:
    app: import
  ports:
    - port: 4001
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: issue
spec:
  selector:
    app: issue
  ports:
    - port: 4002
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 80
